--- a/Source/Properties/Resources.resx
+++ b/Source/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="laptop" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\laptop.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="internet-connections-off_icon-icons.com_68537" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\internet-connections-off_icon-icons.com_68537.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
